@@ -1,3 +1,9 @@
+2007-03-16  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Make use of iocpsock for the XMPP link. Added
+	no-cache headers on the history requests to combat site caching of
+	history files. Fixed loading of tile 0.8.0
+
 2007-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Use the new Tcl compatible TIP index.
